--- a/LED_Controller_STM/.cproject
+++ b/LED_Controller_STM/.cproject
@@ -104,9 +104,12 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="ilg.gnuarmeclipse.managedbuild.cross.config.elf.debug.236601569.1671495106" name="pwm.c" rcbsApplicability="disable" resourcePath="src/pwm.c" toolsToInvoke="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.1084058612.1124027348">
+						<tool id="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.1084058612.1124027348" name="Cross ARM C Compiler" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.1084058612"/>
+					</fileInfo>
 					<sourceEntries>
-						<entry excluding="USB_Class_LED/Src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
-						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="USB_Class_LED/Src"/>
+						<entry excluding="src/pwm.c|USB_Class_LED/Src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="USB_Class_LED/Src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -216,5 +219,12 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/LED_Controller_STM"/>
+		</configuration>
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/LED_Controller_STM"/>
+		</configuration>
+	</storageModule>
 </cproject>
