--- a/LED_Controller_STM/.cproject
+++ b/LED_Controller_STM/.cproject
@@ -54,6 +54,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LED_Controller_STM/cfg}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/STM32/inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/Any/inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/GenericARM}&quot;"/>
 								</option>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.defs.1783178338" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.defs" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="STM32F103xB"/>
@@ -72,6 +73,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LED_Controller_STM/cfg}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/STM32/inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/Any/inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/GenericARM}&quot;"/>
 								</option>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs.2082190008" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="STM32F103xB"/>
@@ -84,8 +86,8 @@
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.scriptfile.2133673438" name="Script files (-T)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.scriptfile" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/STM32/ld/STM32F103C8_FLASH.ld}&quot;"/>
 								</option>
-								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.other.1234818016" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.other" useByScannerDiscovery="false" value="--specs=rdimon.specs" valueType="string"/>
-								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.usenewlibnano.1393140578" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.usenewlibnano" useByScannerDiscovery="false" value="true" valueType="boolean"/>
+								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.other.1234818016" name="Other linker flags" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.other" useByScannerDiscovery="false" value="--specs=rdimon.specs" valueType="string"/>
+								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.usenewlibnano.1393140578" name="Use newlib-nano (--specs=nano.specs)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.linker.usenewlibnano" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<inputType id="ilg.gnuarmeclipse.managedbuild.cross.tool.c.linker.input.102067817" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.c.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -154,6 +156,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LED_Controller_STM/cfg}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/STM32/inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/Any/inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/GenericARM}&quot;"/>
 								</option>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.defs.158328407" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.defs" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="STM32F103xB"/>
@@ -172,6 +175,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/LED_Controller_STM/cfg}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/STM32/inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/Any/inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/_Common/GenericARM}&quot;"/>
 								</option>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs.266688128" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="STM32F103xB"/>
